Design: Register placeholder

--- a/views/user/registerPage.ejs
+++ b/views/user/registerPage.ejs
@@ -19,7 +19,7 @@
               class="w-24"
             />
           </a>
-          <hr class="w-full my-4 border-t border-blue-600" />
+          <hr class="w-full my-4 border-t border-sky-600" />
           <form
             id="registerForm"
             class="w-full flex flex-col items-center space-y-4"
@@ -30,14 +30,15 @@
                 <br />
                 <input
                   type="text"
-                  class="userName w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="userName w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="userName"
+                  placeholder="이름은 2~10글자의 한글, 영어만 사용 가능합니다"
                   required
                 />
               </label>
             </div>
             <div class="userNameGuide hidden mb-4 text-red-500">
-              이름은 2~10글자의 한글, 영어만 사용 가능합니다.
+              2~10글자의 한글, 영어만 사용 가능합니다.
             </div>
             <div class="w-full flex justify-between items-center">
               <label class="flex-grow font-bold">
@@ -45,14 +46,15 @@
                 <br />
                 <input
                   type="text"
-                  class="loginId w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="loginId w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="loginId"
+                  placeholder="6~10글자의 영문, 숫자만 사용 가능합니다"
                   required
                 />
               </label>
               <input
                 type="button"
-                class="idDuplicateCheckButton w-1/4 m-2 h-12 text-white text-base bg-blue-600 cursor-pointer font-semibold active:bg-blue-800 rounded"
+                class="idDuplicateCheckButton w-1/4 m-2 h-12 text-white text-base bg-sky-600 cursor-pointer font-semibold active:bg-blue-800 rounded"
                 onclick="idDuplicateCheck()"
                 value="중복체크"
               />
@@ -66,8 +68,9 @@
                 <br />
                 <input
                   type="password"
-                  class="userPw w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="userPw w-full h-12 px-2 mb-4 border-2 border-gray-300 rounded-md  focus:border-sky-500 focus:outline-none focus:border-2"
                   name="userPw"
+                  placeholder="8~15글자의 영문, 숫자, 특수문자를 포함해야 합니다"
                   required
                 />
               </label>
@@ -82,8 +85,9 @@
                 <br />
                 <input
                   type="password"
-                  class="userPwCheck w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="userPwCheck w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md  focus:border-sky-500 focus:outline-none focus:border-2"
                   name="userPwCheck"
+                  placeholder="비밀번호를 한번 더 입력 해야합니다."
                   oninput="userPwRecheck()"
                   required
                 />
@@ -98,8 +102,9 @@
                 <br />
                 <input
                   type="text"
-                  class="userNick w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="userNick w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="userNick"
+                  placeholder="2~10글자의 한글, 영어만 사용 가능합니다"
                   required
                 />
               </label>
@@ -113,8 +118,9 @@
                 <br />
                 <input
                   type="email"
-                  class="email w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="email w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="email"
+                  placeholder="cat@example.com"
                 />
               </label>
             </div>
@@ -127,8 +133,10 @@
                 <br />
                 <input
                   type="text"
-                  class="address w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="address w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="address"
+                  placeholder="도로명 주소로 작성 해주세요"
+                  
                 />
               </label>
             </div>
@@ -138,7 +146,7 @@
                 <br />
                 <input
                   type="date"
-                  class="birthday w-full h-12 px-2 mb-4 bg-gray-200 rounded  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="birthday w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="birthday"
                 />
               </label>
