--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -4,3 +4,6 @@
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<title>Blomit</title>
+<link rel="icon" href="/static/image//Blomit-B-Logo.png" type="image/x-icon">
