Design: Header Username

--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -10,13 +10,12 @@
         class="h-8 md:h-14"
         alt="blomit Logo"
       />
-    
     </a>
     
     <div class="flex items-center space-x-6 rtl:space-x-reverse">
       <!--세션 id랑 userid랑 같으면-->
       <span class="text-gray-700 text-xs font-bold ">
-        Welcome, <%= sessionUser.userNick %>
+        Welcome <%= sessionUser.userNick %>
       </span>
       <!--별명값 넣음.-->
       <a href="/post/search">
@@ -118,8 +117,8 @@
   >
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
-        src="/static/image/logoImage.png"
-        class="h-8 md:h-14"
+        src="/static/image//Blomit-Logo.png"
+        class="h-8 md:h-10"
         alt="blomit Logo"
       />
     </a>
