--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -6,7 +6,7 @@
     class="flex flex-wrap justify-between items-center mx-auto py-1 px-4 md:px-10">
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
-        src="/static/image/logoImage.png"
+        src="/static/image/Blomit-Logo.png"
         class="h-8 md:h-14"
         alt="blomit Logo"
       />
@@ -118,7 +118,7 @@
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
         src="/static/image//Blomit-Logo.png"
-        class="h-8 md:h-10"
+        class="h-5 "
         alt="blomit Logo"
       />
     </a>
