--- a/views/user/registerPage.ejs
+++ b/views/user/registerPage.ejs
@@ -10,12 +10,12 @@
       <div
         class="registerBox flex justify-center items-center box-border bg-white rounded-lg w-full p-6 min-h-screen"
       >
-        <div class="registerWrapper w-full sm:w-3/4 md:w-1/2 flex flex-col items-center">
+        <div class="registerWrapper w-full sm:w-3/4 md:w-2/5 flex flex-col justify-center items-center">
           <a href="/">
             <img
-              src="/static/image/logoImage.png"
+              src="/static/image/Blomit-Logo.png"
               alt="logoImage"
-              class="w-24"
+              class=""
             />
           </a>
           <hr class="w-full my-4 border-t border-sky-600" />
@@ -29,14 +29,14 @@
                 <br />
                 <input
                   type="text"
-                  class="userName w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="userName w-full h-12 px-1  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="userName"
                   placeholder="이름은 2~10글자의 한글, 영어만 사용 가능합니다"
                   required
                 />
               </label>
             </div>
-            <div class="userNameGuide hidden mb-4 text-red-500">
+            <div class="userNameGuide hidden text-red-500">
               2~10글자의 한글, 영어만 사용 가능합니다.
             </div>
             <div class="w-full flex justify-between items-center">
@@ -45,7 +45,7 @@
                 <br />
                 <input
                   type="text"
-                  class="loginId w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="loginId w-full h-12 px-2  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="loginId"
                   placeholder="6~10글자의 영문, 숫자만 사용 가능합니다"
                   required
@@ -67,14 +67,14 @@
                 <br />
                 <input
                   type="password"
-                  class="userPw w-full h-12 px-2 mb-4 border-2 border-gray-300 rounded-md  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="userPw w-full h-12 px-2 border-2 border-gray-300 rounded-md  focus:border-sky-500 focus:outline-none focus:border-2"
                   name="userPw"
                   placeholder="8~15글자의 영문, 숫자, 특수문자를 포함해야 합니다"
                   required
                 />
               </label>
             </div>
-            <div class="userPwGuide hidden mb-4 text-red-500">
+            <div class="userPwGuide hidden text-red-500">
               비밀번호는 8~15글자의 영문, 숫자, 특수문자(@$!%*#?&)를 포함해야
               합니다.
             </div>
@@ -84,7 +84,7 @@
                 <br />
                 <input
                   type="password"
-                  class="userPwCheck w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md  focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="userPwCheck w-full h-12 px-2 border-2 border-gray-300 rounded-md  focus:border-sky-500 focus:outline-none focus:border-2"
                   name="userPwCheck"
                   placeholder="비밀번호를 한번 더 입력 해야합니다."
                   oninput="userPwRecheck()"
@@ -108,7 +108,7 @@
                 />
               </label>
             </div>
-            <div class="userNickGuide hidden mb-4 text-red-500">
+            <div class="userNickGuide hidden text-red-500">
               별명은 2~10글자의 한글, 영어만 사용 가능합니다.
             </div>
             <div class="w-full">
@@ -117,13 +117,13 @@
                 <br />
                 <input
                   type="email"
-                  class="email w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="email w-full h-12 px-2 border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="email"
                   placeholder="cat@example.com"
                 />
               </label>
             </div>
-            <div class="emailGuide hidden mb-4 text-red-500">
+            <div class="emailGuide hidden text-red-500">
               이메일 형식이 맞지 않습니다.
             </div>
             <div class="w-full">
@@ -132,7 +132,7 @@
                 <br />
                 <input
                   type="text"
-                  class="address w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="address w-full h-12 px-2 border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="address"
                   placeholder="도로명 주소로 작성 해주세요"
                   
@@ -145,7 +145,7 @@
                 <br />
                 <input
                   type="date"
-                  class="birthday w-full h-12 px-2 mb-4  border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
+                  class="birthday w-full h-12 px-2 border-2 border-gray-300 rounded-md   focus:border-sky-500 focus:outline-none focus:border-2"
                   name="birthday"
                 />
               </label>
@@ -163,7 +163,6 @@
         </div>
       </div>
     </main>
-    <footer><%- include("../include/footer.ejs") %></footer>
     <script>
       let userNameValidate;
       let loginIdValidate;
