--- a/views/user/profilePage.ejs
+++ b/views/user/profilePage.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <%- include('../include/header.ejs') %>
-    <main class="px-4 sm:px-6 lg:px-52 pt-20 ">
+    <main class="px-4 sm:px-6 lg:px-52 pt-20">
       <div class="flex flex-col items-center">
         <h1 class="text-xl font-bold mb-4"><%= user.userName %></h1>
         <img
@@ -26,82 +26,76 @@
             class="text-red-500 mb-4"
             style="display: none"
           ></div>
-          <div class="mb-4 border-slate-500 outline-none border-2 rounded-md p-2">
-            <label
-              for="thumbnail"
-              class="block text-gray-700"
+
+          <div class="border-b border-gray-300 py-4 flex items-center">
+            <label for="thumbnail" class="block text-gray-700 w-1/3"
               >프로필 이미지</label
             >
             <input
               type="file"
               name="thumbnail"
               id="thumbnail"
-              class="mt-1 block w-full"
+              class="mt-1 block w-2/3"
               onchange="previewImage();"
             />
           </div>
-          <div class="mb-4  border-slate-500 outline-none border-2 rounded-md p-2">
-            <label for="userNick" class="block text-gray-700"
+
+          <div class="border-b border-gray-300 py-4 flex items-center">
+            <label for="userNick" class="block text-gray-700 w-1/3"
               >닉네임</label
             >
             <input
               type="text"
               id="userNick"
-              class="mt-1 block w-full"
+              class="mt-1 block w-2/3"
               placeholder="닉네임을 입력하세요"
-              value="<%= user.userNick %>"
             />
           </div>
-          <div class="mb-4  border-slate-500 outline-none border-2 rounded-md p-2">
-            <label for="email" class="block text-gray-700 "
-              >이메일</label
-            >
+
+          <div class="border-b border-gray-300 py-4 flex items-center">
+            <label for="email" class="block text-gray-700 w-1/3">이메일</label>
             <input
               type="text"
               id="email"
-              class="mt-1 block w-full"
+              class="mt-1 block w-2/3"
               placeholder="이메일을 입력하세요"
-              value="<%= user.email %>"
             />
           </div>
-          <div class="mb-4  border-slate-500 outline-none border-2 rounded-md p-2">
-            <label for="address" class="block text-gray-700 "
-              >주소</label
-            >
+
+          <div class="border-b border-gray-300 py-4 flex items-center">
+            <label for="address" class="block text-gray-700 w-1/3">주소</label>
             <input
               type="text"
               id="address"
-              class="mt-1 block w-full"
+              class="mt-1 block w-2/3"
               placeholder="주소를 입력하세요"
-              value="<%= user.address %>"
             />
           </div>
-          <div class="mb-4  border-slate-500 outline-none border-2 rounded-md p-2">
-            <label for="birthday" class="block text-gray-700"
-              >생일</label
-            >
+
+          <div class="border-b border-gray-300 py-4 flex items-center">
+            <label for="birthday" class="block text-gray-700 w-1/3">생일</label>
             <input
               type="date"
               id="birthday"
-              class="mt-1 block w-full"
+              class="mt-1 block w-2/3"
               placeholder="생일을 입력하세요"
-              value="<%= user.birthday %>"
-              max=""
             />
           </div>
+
+
           <button
-            type="submit"
-            class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-700"
-          >
-            수정
-          </button>
-          <!-- <button
             type="button"
             onclick="resetProfileImage()"
-            class="w-full bg-red-500 text-white py-2 rounded hover:bg-red-700 mt-4"
+            class="w-full bg-gray-400 text-white py-2 rounded hover:bg-gray-500 mt-4"
           >
             프로필 초기화
-          </button> -->
+          </button>
+          <button
+          type="submit"
+          class="w-full bg-[#419BED] text-white py-2 rounded hover:bg-blue-500 mt-4"
+        >
+          수정
+        </button>
         </form>
       </div>
     </main>
