Design: 전체 흐름 체크

--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -7,13 +7,11 @@
         </div>
         <div class="text-sm text-gray-500">Terms</div>
         <div class="text-sm text-gray-500">Privacy</div>
-        <div class="text-sm text-gray-500">Security</div>
-        <div class="text-sm text-gray-500">Docs</div>
       </div>
       <ul class="flex items-center text-sm font-medium text-gray-500">
         <li>
           <a href="https://github.com/SeSAC-1st" class="hover:underline flex items-center">
-            <img src="/static/image/githubImage.png" alt="github이미지" width="30px" class="ml-2" />
+            <img src="/static/image/githubImage.png" alt="github이미지" width="30px" />
             Github
           </a>
         </li>
