--- a/views/posts/postDetailPage.ejs
+++ b/views/posts/postDetailPage.ejs
@@ -11,7 +11,7 @@
       <h1 id="postTitle" class="text-3xl font-extrabold mb-10 text-center">
         <%= post.postTitle %>
       </h1>
-      <div class="text-gray-500 mb-5">
+      <div class="text-gray-500 mb-5 ">
         <div class="flex justify-between items-center">
           <div>
             <span class="font-semibold mr-2">by <%= post.User.userNick %></span>
@@ -40,7 +40,7 @@
         </div>
         <hr class="border border-gray-300 my-2" />
       </div>
-      <div class="mt-5">
+      <div class="mt-5 min-h-[50vh]">
         <p id="postContent"><%- post.postContent %></p>
       </div>
       <hr class="border border-gray-300 my-6" />
@@ -56,7 +56,7 @@
         <div class="flex justify-end">
           <button
             type="submit"
-            class="bg-blue-500 text-white font-semibold py-0.5 px-1 md:py-1 md:px-3 rounded hover:bg-blue-600"
+            class="bg-blue-500 text-white font-semibold py-1 p-1 md:py-1 md:px-3 rounded hover:bg-blue-600"
           >
             댓글 작성
           </button>
