Fix: 마이페이지 데이터 출력 오류 해결

--- a/views/posts/createPostPage.ejs
+++ b/views/posts/createPostPage.ejs
@@ -204,7 +204,7 @@
 
     function changeTextOnHover() {
             const button = document.getElementById('hoverButton');
-            button.innerText = 'Message';
+            button.innerText = '임시 저장';
         }
 
         function revertTextOnHoverOut() {
