Design: footer,header

--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -5,12 +5,10 @@
         <div class="text-sm text-gray-500">
           2024 <a href="#" class="hover:underline">Design by Blomit</a>
         </div>
-        <div class="text-sm text-gray-500">Terms</div>
-        <div class="text-sm text-gray-500">Privacy</div>
       </div>
       <ul class="flex items-center text-sm font-medium text-gray-500">
         <li>
-          <a href="https://github.com/SeSAC-1st" class="hover:underline flex items-center">
+          <a href="https://github.com/SeSAC-1st/SeSAC-1st" class="hover:underline flex items-center">
             <img src="/static/image/githubImage.png" alt="github이미지" width="30px" />
             Github
           </a>
