--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -15,7 +15,7 @@
     <div class="flex items-center space-x-6 rtl:space-x-reverse">
       <!--세션 id랑 userid랑 같으면-->
       <span class="text-gray-700 text-xs font-bold ">
-        Welcome <%= sessionUser.userNick %>
+        Hello <%= sessionUser.userNick %>
       </span>
       <!--별명값 넣음.-->
       <a href="/post/search">
@@ -118,7 +118,7 @@
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
         src="/static/image//Blomit-Logo.png"
-        class="h-5 "
+        class="h-8 md:h-14 "
         alt="blomit Logo"
       />
     </a>
@@ -141,7 +141,7 @@
       </a>
       <button
         type="button"
-        class="text-white bg-blue-500 active:bg-blue-900 font-medium rounded-lg text-sm px-4 py-1 text-center"
+        class="text-white bg-[#3FA2F6] hover:bg-blue-500 font-medium rounded-lg text-sm px-4 py-2 text-center"
         onclick="window.location.href='/user/login'"
       >
         로그인
