Fix: css 디테일 수정

--- a/views/posts/myPostsPage.ejs
+++ b/views/posts/myPostsPage.ejs
@@ -8,7 +8,7 @@
   </head>
   <body class="flex flex-col min-h-screen">
     <%- include('../include/header.ejs') %>
-    <main class="flex-1 px-4 sm:px-6 lg:px-52 pt-20 dark:bg-gray-900">
+    <main class="flex-1 px-4 sm:px-6 lg:px-52 pt-20">
       <% if(userPostList.length > 0) { %>
       <article
         class="flex flex-col self-stretch my-auto max-md:mt-5 max-md:max-w-full"
