--- a/views/search/searchPage.ejs
+++ b/views/search/searchPage.ejs
@@ -46,7 +46,7 @@
           required
         />
         <button
-          class="text-white h-11 absolute end-2.5 bottom-2.5 bg-mainColor hover:bg-[#0d4a9b] active:ring-4 active:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2"
+          class="text-white h-11 absolute end-2.5 bottom-2.5 bg-[#419BED] hover:bg-blue-500 active:ring-4 active:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2"
           onclick="searchForm()"
         >
           검색
