--- a/views/user/loginPage.ejs
+++ b/views/user/loginPage.ejs
@@ -44,7 +44,7 @@
             ></div>
             <input
               type="button"
-              class="loginButton cursor-pointer !bg-[#3FA2F6] mt-[20px] font-semibold text-white"
+              class="loginButton cursor-pointer !bg-[#3FA2F6] mt-[20px] font-semibold text-white hover:!bg-blue-500"
               value="로그인"
               onclick="submitForm()"
             />
