Design: Main 반응형 조정

--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -125,10 +125,10 @@
             }
         }
 
-        /* 아이폰 SE */
-        @media only screen and (min-width: 100px)  and (max-width: 768px) {
+        /* 모바일 */
+        @media only screen and (max-width: 768px) {
             .wrap {
-                height: 710vh; /* 원하는 값으로 변경 */
+                height: 800vh; /* 원하는 값으로 변경 */
             }
         }
 
