Design: 페이지네잉션 조정

--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -116,7 +116,7 @@
             width: 143.75%;
             height: 143.75%;
             border-color: rgba(65, 155, 237, 0.4);
-            animation-duration: s;
+            animation-duration: 66s;
         }
 
         @keyframes move {
@@ -128,7 +128,7 @@
         /* 모바일 */
         @media only screen and (max-width: 768px) {
             .wrap {
-                height: 800vh; /* 원하는 값으로 변경 */
+                height: 700vh; /* 원하는 값으로 변경 */
             }
         }
 
