Feat: 글 작성시 리디렉션

--- a/views/posts/createPostPage.ejs
+++ b/views/posts/createPostPage.ejs
@@ -153,8 +153,8 @@
 
           const { data } = res;
           if (data) {
-            alert('게시 완료!');
-            // document.location.href = '/';
+            alert('임시 저장!');
+            document.location.href = '/post/list/user/1/12';
           }
           } catch (error) {
           console.error(error);
