Design: Regiser 필수 정보 값

--- a/views/user/registerPage.ejs
+++ b/views/user/registerPage.ejs
@@ -23,7 +23,7 @@
           >
             <div class="w-full">
               <label class="font-bold">
-                이름
+                이름*
                 <br />
                 <input
                   type="text"
@@ -39,7 +39,7 @@
             </div>
 
             <div class="w-full flex flex-col justify-between items-center">
-              <label class="flex-grow font-bold text-left w-full">아이디</label>
+              <label class="flex-grow font-bold text-left w-full">아이디*</label>
               <div class="flex items-center w-full gap-2">
                 <input
                   type="text"
@@ -62,7 +62,7 @@
             </div>
             <div class="w-full">
               <label class="font-bold">
-                비밀번호
+                비밀번호*
                 <br />
                 <input
                   type="password"
@@ -79,7 +79,7 @@
             </div>
             <div class="w-full">
               <label class="font-bold">
-                비밀번호 확인
+                비밀번호 확인*
                 <br />
                 <input
                   type="password"
@@ -96,7 +96,7 @@
             </div>
             <div class="w-full">
               <label class="font-bold">
-                별명
+                별명*
                 <br />
                 <input
                   type="text"
