--- a/views/posts/editPostPage.ejs
+++ b/views/posts/editPostPage.ejs
@@ -45,7 +45,7 @@
                 </button>
             </div>
             <div class="mx-5">
-            <button onclick="stashPost()" id="hoverButton" type="button" 
+            <button onclick="stashPost('<%= post.postId %>')" id="hoverButton" type="button" 
             onmouseover="changeTextOnHover()" 
             onmouseout="revertTextOnHoverOut()"
             class="hover-text-change text-sky-500 hover:shadow-sm font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none">
@@ -117,7 +117,7 @@
 
      // 게시물 stash 업데이트 함수
      async function stashPost(postId) {
-      const postTitle = document.querySelector('#postTitle').value.trim();
+      const stashTitle = "Stash :" + document.querySelector('#postTitle').value.trim();
       const postContent = editor.getHTML();
 
 
@@ -131,13 +131,13 @@
             method: 'patch',
             url: `/post/${postId}`,
             data: {
-              postTitle,
+              postTitle: stashTitle,
               postContent,
             },
           });
 
           if (res.data === 1){
-            alert('수정 완료')
+            alert('임시저장 완료')
             window.location.href = `/post/${postId}`
           }
           else{
