--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -6,4 +6,4 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <title>Blomit</title>
-<link rel="icon" href="/static/image//Blomit-B-Logo.png" type="image/x-icon">
+<link rel="icon" href="/static/image/Blomit-B-Logo.png" type="image/x-icon">
